# diagnostor

./: CMakeLists.txt  README.md  config.h
core/: abstractdiagnostor.cpp  abstractdiagnostor.h  database.cpp  database.h  logger.cpp  logger.h  main.cpp  packageversion.cpp  packageversion.h  reporter.cpp  reporter.h  scheduler.cpp  scheduler.h
module/: README.md
utility/: README.md
